--- a/news-JS/tsconfig.json
+++ b/news-JS/tsconfig.json
@@ -7,6 +7,7 @@
       "sourceMap": true,
       "outDir": "dist",
       "allowJs": true,
+      "noImplicitAny": true,
     },
     "lib": ["es2015"]
   }
