--- a/news-JS/tsconfig.json
+++ b/news-JS/tsconfig.json
@@ -8,6 +8,7 @@
       "outDir": "dist",
       "allowJs": true,
       "noImplicitAny": true,
+      "strict": true,
     },
     "lib": ["es2015"]
   }
